--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build" : "tsc",
+    "build": "tsc",
     "start": "npm run build && nodemon dist/index.js --exec ts-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "nodejs-ts-rcc": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
