--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
-    "express": "^4.19.2",
-    "nodejs-ts-rcc": "^1.0.0"
+    "express": "^4.19.2"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
