--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "nodejs-ts-rcc",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsup",
+    "build": "tsc",
     "start": "npm run build && nodemon dist/index.js --exec ts-node",
     "test": "jest"
   },
